fix horizontal scrolling

--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@
 html {
   font-size: 62.5%;
   scroll-behavior: smooth;
-  /* overflow-x: hidden; */
+  overflow-x: hidden;
 }
 
 /*
@@ -58,6 +58,7 @@ body {
   line-height: 1;
   font-weight: 400;
   color: var(--gray-color);
+  overflow-x: hidden;
 }
 
 /****************************/
